<resources>
    <string name="app_name">SelfImage</string>
    <string name="content_authority">com.pluviostudios.selfimage.app</string>
    <string name="no_current_image">You need to take todays picture!</string>
    <string name="has_current_image">"You're all set for today!"</string>

    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>

    <string name="button_scan">Scan</string>
    <string name="results_found">%d results</string>
    <string name="plan_title">Plan</string>

    <string name="settings">Settings</string>

    <string name="Notification_Title">SelfImage</string>
    <string name="Notification_Content">"Hello%1$s, You have yet to take today's picture!"</string>
    <string name="retrieving_data">Retrieving Data</string>

    <string name="no_network_connection">Unable to connect to the internet</string>

    <string name="calorie_string">Cal</string>
    <string name="calorie_view">%1$d cal</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_display_name">Display Name</string>
    <string name="pref_display_name_key">display_name</string>

    <string name="pref_cal_quota">Calorie Quota</string>
    <string name="pref_cal_quota_key">calorie_quota</string>
    <string name="pref_cal_quota_default">2000</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notification_key">use_notifications</string>
    <string name="pref_title_new_message_notifications">Use daily notifications</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="fiber">Fiber</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="monounsaturated_fat">Monounsaturated Fat</string>
    <string name="polyunsaturated_fats">Polyunsaturated Fats</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="save">Save</string>
    <string name="timelapse">TimeLapse</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="scan">Scan</string>
    <string name="time_lapse_content_description">A time-lapse of your progress</string>
    <string name="start">Start</string>
    <string name="your_image">Your image</string>
    <string name="pref_personalize_with_google">Personalize With Google</string>
    <string name="pref_personalize_with_google_key">personalize_google</string>
    <string name="Google_Sign_In_Success">Personalized with Google!</string>
    <string name="Google_Sign_In_Failure">Unable to access Google</string>
    <string name="test_notification">Test Notification</string>


</resources>
