<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/pref_personalize_with_google_key"
        android:title="@string/pref_personalize_with_google"/>

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/pref_display_name_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_display_name"/>

    <EditTextPreference
        android:defaultValue="@string/pref_cal_quota_default"
        android:inputType="number"
        android:key="@string/pref_cal_quota_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_cal_quota"/>

</PreferenceScreen>
